--- a/src/pages/Pricing/Pricing.css
+++ b/src/pages/Pricing/Pricing.css
@@ -3,11 +3,15 @@
     flex-direction: column !important;
     justify-content: center;
     align-items: center;
-    max-width: fit-content;
-    margin: auto;
+    max-width: 100%;
+    margin: 0 auto;
     text-align: center;
+    padding: 50px 20px;
+    min-height: 80vh;
+    margin:  100px auto;
     background-color: var(--pricing-container-bg-color) !important;
   }
+  
 
 [data-theme='dark'] {
     --pricing-container-bg-color: #121212;
@@ -23,8 +27,11 @@
     justify-content: center !important;
     align-items: center !important;
     flex-wrap: wrap;
-    gap: 20px;
-    margin-top: 30px;
+   
+    gap: 30px;
+    margin-top: 50px;
+    margin-bottom: 50px;
+    padding-bottom: 20px;
   }
 
   @media (max-width: 768px) {
@@ -37,3 +44,5 @@
       width: 90%;
     }
   }
+  
+
